# VagaBot

./: .env.exemple  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  teste.py
app/core/: config.py  scheduler.py
app/jobs/: linkedin.py
app/services/: automacao_linkedin.py  browser.py  job_scheduler.py  telegram.py
app/utils/: log_manage.py  log_util.py
