[tool.poetry]
name = "VagaBot"
version = "0.1.0"
description = ""
authors = ["Diniz <mamakerrykinh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
django-environ = "^0.12.0"
schedule = "^1.2.2"
environs = "^14.1.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
